applied gradient and threshold before warping image

--- a/P2.ipynb
+++ b/P2.ipynb
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -309,30 +309,12 @@
     "    binary[(channel >= thresh[0]) & (channel <= thresh[1])] = 1\n",
     "    \n",
     "    return binary\n",
-    "    \n",
-    "\n",
-    "# Edit this function to create your own pipeline.\n",
-    "def threshold(channels, r_thresh=(170, 255), g_thresh=(20, 100), b_thresh=(20, 100)):\n",
-    "    # get each channel to process\n",
-    "    r_channel, g_channel, b_channel = channels\n",
-    "    \n",
-    "    # magnitude of gradient and threshold blue color channel\n",
-    "    b_binary = channel_threshold(b_channel, b_thresh)\n",
-    "    \n",
-    "    # Sobel x and threshold green color channel\n",
-    "    g_binary = channel_threshold(g_channel, g_thresh)\n",
-    "    \n",
-    "    # Threshold red color channel\n",
-    "    r_binary = channel_threshold(r_channel, r_thresh)\n",
-    "    \n",
-    "    # Stack each channel\n",
-    "    color_binary = np.dstack(( b_binary, g_binary, r_binary))*255\n",
-    "    return color_binary\n"
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -340,6 +322,7 @@
     "import tools as tls\n",
     "import matplotlib.pyplot as plt\n",
     "import matplotlib.image as mpimg\n",
+    "import numpy as np\n",
     "\n",
     "data = camera.load('camera_calibration_data.p')\n",
     "\n",
@@ -366,37 +349,20 @@
     "    \n",
     "    return histogram\n",
     "\n",
-    "def color_binary(image):\n",
-    "    # separate component of rgb color space \n",
-    "    b, g, r = tls.channels(image)\n",
-    "    \n",
+    "def gradients(img, g_thresh=(50, 150), b_thresh=(75,100)):\n",
     "    # separate components of hls color space\n",
     "    h, l, s = tls.channels(tls.bgr2hls(image))\n",
     "    \n",
-    "    # select s component as red channel\n",
-    "    r_channel = s \n",
-    "    r_thresh=(120, 255) # red\n",
-    "    \n",
-    "    # sobel x of R color component\n",
-    "    #r_channel = sobel_absolute_scaled(r)\n",
-    "    #r_thresh=(50, 150) # red\n",
-    "    \n",
+    "    # calculate absolute sobel and apply threshold\n",
     "    g_channel = sobel_absolute_scaled(s)\n",
-    "    #g_thresh=(20, 150) # green\n",
-    "    #g_thresh=(20, 100) # green\n",
-    "    g_thresh=(75, 150) # green\n",
+    "    g_binary = channel_threshold(g_channel, g_thresh)\n",
     "    \n",
-    "    # sobel magnitude \n",
-    "    #b_channel = sobel_magnitude(l) \n",
-    "    b_channel = sobel_absolute_scaled(l)\n",
-    "    b_thresh=(30,100) # blue\n",
+    "    # calculate sobel manitude and apply threshold\n",
+    "    b_channel = sobel_magnitude(l)\n",
+    "    b_binary = channel_threshold(b_channel, b_thresh)\n",
     "    \n",
-    "    colors = r_channel, b_channel, g_channel\n",
+    "    return np.dstack((b_binary, g_binary, np.zeros_like(s)))*255\n",
     "    \n",
-    "    # combinding color \n",
-    "    color_binary = threshold(colors, r_thresh, g_thresh, b_thresh)\n",
-    "    \n",
-    "    return color_binary\n",
     "\n",
     "out = 'output_images'\n",
     "\n",
@@ -422,13 +388,17 @@
     "    # undistorte the image\n",
     "    undist = cv2.undistort(image, mtx, dist, None, mtx)\n",
     "\n",
+    "    color = gradients(undist)\n",
+    "    tls.save_image_as(color, 'binary_{}{}'.format(base,ext), tls.path_join(out, 'binary'))\n",
+    "    \n",
+    "    binary = color[:,:,0] + color[:,:,1] + color[:,:,2]\n",
+    "    binary = channel_threshold(binary,(1,255))\n",
+    "    \n",
+    "    \n",
     "    # src and dst points\n",
-    "    #src = np.float32([[0,h],[w,h],[970,h//2],[400,h//2]])\n",
-    "    #src = np.float32([[0,h],[w,h],[710,h//2],[550,h//2]])\n",
-    "    src = np.float32([[288,h],[1190,h],[670,440],[570,440]])\n",
-    "    #st = np.float32([[100,h],[w-100,h],[w-10,10],[10,10]])\n",
-    "    #dst = np.float32([[100,h],[w-100,h],[w-10,h//2],[10,h//2]])\n",
-    "    dst = np.float32([[288,h],[1190,h],[1190,10],[288,10]])\n",
+    "    src = np.float32([[50,h],[w-50,h],[720,h//2+80],[570,h//2+80]])\n",
+    "    dst = np.float32([[200,h],[w-200,h],[w-200,0],[200,0]])\n",
+    "    \n",
     "    lines = np.copy(undist)\n",
     "    cv2.line(lines, tuple(src[0]), tuple(src[1]), (255,0,0), 5)\n",
     "    cv2.line(lines, tuple(src[1]), tuple(src[2]), (255,0,0), 5)\n",
@@ -440,18 +410,11 @@
     "    cv2.line(lines, tuple(dst[3]), tuple(dst[0]), (0,255,0), 5)\n",
     "    tls.save_image_as(lines, 'lines_{}{}'.format(base,ext), tls.path_join(out, 'lines'))\n",
     "    \n",
-    "    warped, M = warp(undist, src, dst)\n",
-    "    #warped, M = warp(binary, src, dst)\n",
+    "    warped, M = warp(binary*255, src, dst)\n",
     "    tls.save_image_as(warped, 'warped_{}{}'.format(base,ext), tls.path_join(out, 'warped'))\n",
     "    \n",
-    "    color = color_binary(warped)\n",
-    "    tls.save_image_as(color, 'binary_{}{}'.format(base,ext), tls.path_join(out, 'binary'))\n",
+    "    histogram = hist(warped)\n",
     "    \n",
-    "    binary = color[:,:,0] + color[:,:,1] + color[:,:,2]\n",
-    "    binary = channel_threshold(binary,(255,3*255))\n",
-    "    histogram = hist(binary)\n",
-    "    #histogram = hist(warped/255)\n",
-    "\n",
     "    fig,ax = plt.subplots(1,1)\n",
     "    ax.plot(histogram)\n",
     "    #print('{}plot/{}.png'.format(out,base))\n",
