found threshold values ok for test_images

--- a/P2.ipynb
+++ b/P2.ipynb
@@ -276,7 +276,6 @@
     "    # Calculate the magnitude \n",
     "    gradmag = np.sqrt(sobelx**2 + sobely**2)\n",
     "    \n",
-    "    # 4) Scale to 8-bit (0 - 255) and convert to type = np.uint8\n",
     "    # Rescale to 8 bit\n",
     "    scale_factor = np.max(gradmag)/255 \n",
     "    gradmag = (gradmag/scale_factor).astype(np.uint8)\n",
@@ -314,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -331,6 +330,7 @@
     "\n",
     "def warp(image, src, dst):\n",
     "\n",
+    "    # only width and height\n",
     "    w,h = image.shape[1::-1]\n",
     "    \n",
     "    # get M, the transform matrix\n",
@@ -361,6 +361,7 @@
     "    b_channel = sobel_magnitude(l)\n",
     "    b_binary = channel_threshold(b_channel, b_thresh)\n",
     "    \n",
+    "    # RGB or BGR\n",
     "    return np.dstack((b_binary, g_binary, np.zeros_like(s)))*255\n",
     "    \n",
     "\n",
@@ -388,12 +389,13 @@
     "    # undistorte the image\n",
     "    undist = cv2.undistort(image, mtx, dist, None, mtx)\n",
     "\n",
-    "    color = gradients(undist)\n",
-    "    tls.save_image_as(color, 'binary_{}{}'.format(base,ext), tls.path_join(out, 'binary'))\n",
+    "    # apply gradients and threshold\n",
+    "    color = gradients(undist, g_thresh=(40, 100), b_thresh=(50,100))\n",
+    "    tls.save_image_as(color, '{}_binary{}'.format(base,ext), tls.path_join(out, 'binary'))\n",
     "    \n",
-    "    binary = color[:,:,0] + color[:,:,1] + color[:,:,2]\n",
-    "    binary = channel_threshold(binary,(1,255))\n",
-    "    \n",
+    "    #binary = color[:,:,0] + color[:,:,1] + color[:,:,2]\n",
+    "    #binary = channel_threshold(binary,(1,255))\n",
+    "    binary = color\n",
     "    \n",
     "    # src and dst points\n",
     "    src = np.float32([[50,h],[w-50,h],[720,h//2+80],[570,h//2+80]])\n",
@@ -408,12 +410,12 @@
     "    cv2.line(lines, tuple(dst[1]), tuple(dst[2]), (0,255,0), 5)\n",
     "    cv2.line(lines, tuple(dst[2]), tuple(dst[3]), (0,255,0), 5)\n",
     "    cv2.line(lines, tuple(dst[3]), tuple(dst[0]), (0,255,0), 5)\n",
-    "    tls.save_image_as(lines, 'lines_{}{}'.format(base,ext), tls.path_join(out, 'lines'))\n",
+    "    tls.save_image_as(lines, '{}_lines{}'.format(base,ext), tls.path_join(out, 'lines'))\n",
     "    \n",
-    "    warped, M = warp(binary*255, src, dst)\n",
-    "    tls.save_image_as(warped, 'warped_{}{}'.format(base,ext), tls.path_join(out, 'warped'))\n",
+    "    warped, M = warp(binary, src, dst)\n",
+    "    tls.save_image_as(warped, '{}_warped{}'.format(base,ext), tls.path_join(out, 'warped'))\n",
     "    \n",
-    "    histogram = hist(warped)\n",
+    "    histogram = hist(warped/255)\n",
     "    \n",
     "    fig,ax = plt.subplots(1,1)\n",
     "    ax.plot(histogram)\n",
@@ -425,10 +427,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# analyse test_images\n",
+    "import video\n",
+    "\n",
+    "#path1 = 'test_images'\n",
+    "path1 = 'output_images/test/binary'\n",
+    "path2 = 'output_images/test/warped'\n",
+    "filename = 'output_video/test-analyse.mp4'\n",
+    "\n",
+    "video.image2video(filename, path1, path2)"
+   ]
   },
   {
    "cell_type": "code",
