created writeup notebook and add images

--- a/P2.ipynb
+++ b/P2.ipynb
@@ -167,11 +167,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "from pipeline import lane_detector\n",
+    "import tools as tls\n",
     "import cv2, os\n",
     "\n",
     "test = lane_detector('camera_calibration_data.p')  \n",
@@ -182,6 +183,7 @@
     "test.debug_histogram = True\n",
     "test.debug_warped = True\n",
     "test.debug_lines = True\n",
+    "test.debug_detect = True\n",
     "\n",
     "test.r_thresh = ( 90, 255)\n",
     "test.g_thresh = ( 30, 150)\n",
@@ -196,7 +198,7 @@
     "    base, ext = tls.filename_split(file_only)\n",
     "    \n",
     "    # tell lane_detector which file is being processed\n",
-    "    detect.base = base\n",
+    "    test.base = base\n",
     "    \n",
     "    # read next file in list\n",
     "    image = cv2.imread(file)\n",
@@ -295,6 +297,7 @@
     "detect.debug_binary = True\n",
     "detect.debug_warped = True\n",
     "detect.debug_histogram = True\n",
+    "\n",
     "\n",
     "detect.offset = 80\n",
     "\n",
