remove double info

--- a/P2.ipynb
+++ b/P2.ipynb
@@ -9,103 +9,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### compute the camera calibration matrix and distortion coefficents\n",
-    "\n",
-    "computing camera calibration is done in the following steps:\n",
-    "* prepare object point matrix\n",
-    "* convert image to grayscale\n",
-    "* finding chessboard corners\n",
-    "* append detected corners for each image\n",
-    "* [optional] draw corners on the image, for checking for detection\n",
-    "* calibrate camera with detected corners from all images\n",
-    "\n",
-    "All these above steps is done in function `calibrate` in `camera.py`, which is used in the code bellow as `camera.calibrate`. \n",
-    "\n",
-    "Calibration can also be executed with `camera.py` as a standalone, from console as this example:\n",
-    "```\n",
-    "$ python camera.py --ipath camera_cal --numx 9 --numy 6 -o camera_calibration_data.p\n",
-    "```  \n",
-    "Add `--opath output_images` as parameter to above command for producing result from corner detection for sanity check purposes. For complete help discription of use `-h` or `--help` as a parameter to `camera.py`.\n",
-    "\n",
-    "#### prepating object point matrix\n",
-    "\n",
-    "Operation for creating object point matrix:\n",
-    "```\n",
-    "    objpnt = np.zeros((ny*nx, 3), np.float32)\n",
-    "    objpnt[:,:2] = np.mgrid[0:nx, 0:ny].T.reshape(-1,2)\n",
-    "```\n",
-    "Here `nx` and `ny` correspons number of corners in x and y direction on the chessboard calibration images, given as paramter `--numx` and `--numy` in the command line tool. Look at the number of detected points in x and y direction in the `example of corner finding result` image bellow.\n",
-    "\n",
-    "#### convert image to grayscale\n",
-    "\n",
-    "This is done by `cv2.cvtColor` function as follows:\n",
-    "```\n",
-    "    # convert image to grayscale \n",
-    "    gray = cv2.cvtColor(image, cv2.COLOR_BGR2GRAY)\n",
-    "```\n",
-    "\n",
-    "\n",
-    "```\n",
-    "def calibrate(path, nx, ny, save=False, out_path = 'output_images'):\n",
-    "    objpoints = []\n",
-    "    imgpoints = []\n",
-    "\n",
-    "    objpnt = np.zeros((ny*nx, 3), np.float32)\n",
-    "    objpnt[:,:2] = np.mgrid[0:nx, 0:ny].T.reshape(-1,2)\n",
-    "\n",
-    "    # get all files in directory with path included \n",
-    "    camera_cal_files = tls.files_in_dir(path, True)\n",
-    "\n",
-    "    for file in camera_cal_files:\n",
-    "        # read image from file\n",
-    "        image = cv2.imread(file)\n",
-    "\n",
-    "        # convert image to grayscale \n",
-    "        gray = cv2.cvtColor(image, cv2.COLOR_BGR2GRAY)\n",
-    "        \n",
-    "        #find chessboard corners\n",
-    "        ret, corners = cv2.findChessboardCorners(gray, (nx,ny), None)\n",
-    "\n",
-    "        if ret == True:\n",
-    "            imgpoints.append(corners)\n",
-    "            objpoints.append(objpnt)\n",
-    "            \n",
-    "            if save == True:\n",
-    "                cv2.drawChessboardCorners(image, (nx,ny), corners, ret)\n",
-    "                head, tail = os.path.split(file)\n",
-    "                tls.save_image_as(image, 'corners_{}'.format(tail), out_path) \n",
-    "\n",
-    "    # returns ret, mtx, dist, rvecs, tvecs\n",
-    "    return cv2.calibrateCamera(objpoints, imgpoints, gray.shape[::-1], None, None)\n",
-    "```\n",
-    "\n",
-    "The camera.py can also be used standalone for calculating and storing the result of camera calibration, as follows:\n",
-    "```\n",
-    "$ python camera.py --ipath camera_cal --numx 9 --numy 6 -o camera_calibration_data.p\n",
-    "```  \n",
-    "\n",
-    "#### Bellow is an example of the results of the camera calibration corner findings: \n",
-    "\n",
-    "<table style=\"width:100%\">\n",
-    "  <tr>\n",
-    "      <td colspan=\"2\"><center><H3>example of corner finding result</H3></center></td>\n",
-    "  </tr>\n",
-    "  <tr>\n",
-    "    <td><img src=\"output_images/corners_calibration2.jpg\" width=\"90%\" height=\"90%\"/></td>\n",
-    "    <td><img src=\"output_images/corners_calibration3.jpg\" width=\"90%\" height=\"90%\"/></td>\n",
-    "  </tr>\n",
-    "  <tr>\n",
-    "    <td><center>calibration2</center></td>\n",
-    "    <td><center>calibration3</center></td>\n",
-    "  </tr>\n",
-    "</table> \n",
-    "\n"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 21,
    "metadata": {},
@@ -161,11 +64,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -212,56 +110,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "<figure>\n",
-    "    <img src=\"output_images/corners_calibration2.jpg\" width=\"50%\" height=\"50%\"/>\n",
-    "    <figcaption><center>example of corner finding result</center></figcaption>\n",
-    "</figure>\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<table style=\"width:100%\">\n",
-    "  <tr>\n",
-    "      <td colspan=\"2\"><center><H3>example of corner finding result</H3></center></td>\n",
-    "  </tr>\n",
-    "  <tr>\n",
-    "    <td><img src=\"output_images/corners_calibration2.jpg\" width=\"90%\" height=\"90%\"/></td>\n",
-    "    <td><img src=\"output_images/corners_calibration3.jpg\" width=\"90%\" height=\"90%\"/></td>\n",
-    "  </tr>\n",
-    "  <tr>\n",
-    "    <td><center>calibration2</center></td>\n",
-    "    <td><center>calibration3</center></td>\n",
-    "  </tr>\n",
-    "</table> \n"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "import cv2, camera\n",
+    "###################################################\n",
+    "##  DO NOT RUN THIS\n",
+    "###################################################\n",
+    "import cv2, camera, video, os\n",
     "import tools as tls\n",
     "import matplotlib.pyplot as plt\n",
     "import matplotlib.image as mpimg\n",
@@ -269,19 +125,18 @@
     "from pipeline import lane_detector \n",
     "\n",
     "out = 'output_images'\n",
+    "video_file = 'challenge_video.mp4'\n",
+    "video_out  = 'challenge_video'\n",
     "\n",
-    "#test_files = tls.files_in_dir('harder_challenge_video', True)\n",
-    "#out = tls.path_join(out, 'harder')\n",
-    "\n",
-    "#test_files = tls.files_in_dir('challenge_video', True)\n",
-    "#out = tls.path_join(out, 'challenge')\n",
-    "\n",
-    "test_files = tls.files_in_dir('project_video', True)\n",
-    "out = tls.path_join(out, 'project')\n",
-    "\n",
-    "#test_files = tls.files_in_dir('test_images', True)\n",
-    "#out = tls.path_join(out, 'test')\n",
-    "       \n",
+    "# get files and set out directory\n",
+    "test_files = tls.files_in_dir(video_out, True)\n",
+    "out = tls.path_join(out, video_out)\n",
+    "    \n",
+    "# generates images from video_file    \n",
+    "if os.path.exists(video_out) == False:\n",
+    "    video.video2image(video_file, video_out)\n",
+    "    \n",
+    "    \n",
     "detect = lane_detector('camera_calibration_data.p')        \n",
     "\n",
     "detect.out = out\n",
@@ -314,20 +169,6 @@
     "    tls.save_image_as(result, '{}_result{}'.format(base,ext), tls.path_join(out, 'result'))\n",
     "    "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -508,13 +349,7 @@
       "t:  19%|█▉        | 241/1260 [00:18<01:13, 13.85it/s, now=None]\u001b[A\n",
       "t:  19%|█▉        | 243/1260 [00:18<01:13, 13.90it/s, now=None]\u001b[A\n",
       "t:  19%|█▉        | 245/1260 [00:18<01:12, 13.98it/s, now=None]\u001b[A\n",
-      "t:  20%|█▉        | 247/1260 [00:18<01:12, 14.05it/s, now=None]\u001b[A\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "t:  20%|█▉        | 247/1260 [00:18<01:12, 14.05it/s, now=None]\u001b[A\n",
       "t:  20%|█▉        | 249/1260 [00:18<01:14, 13.63it/s, now=None]\u001b[A\n",
       "t:  20%|█▉        | 251/1260 [00:18<01:12, 13.87it/s, now=None]\u001b[A\n",
       "t:  20%|██        | 253/1260 [00:18<01:13, 13.71it/s, now=None]\u001b[A\n",
@@ -764,13 +599,7 @@
       "t:  58%|█████▊    | 729/1260 [00:53<00:36, 14.67it/s, now=None]\u001b[A\n",
       "t:  58%|█████▊    | 731/1260 [00:53<00:36, 14.49it/s, now=None]\u001b[A\n",
       "t:  58%|█████▊    | 733/1260 [00:53<00:35, 14.70it/s, now=None]\u001b[A\n",
-      "t:  58%|█████▊    | 735/1260 [00:53<00:36, 14.58it/s, now=None]\u001b[A\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "t:  58%|█████▊    | 735/1260 [00:53<00:36, 14.58it/s, now=None]\u001b[A\n",
       "t:  58%|█████▊    | 737/1260 [00:53<00:35, 14.61it/s, now=None]\u001b[A\n",
       "t:  59%|█████▊    | 739/1260 [00:54<00:36, 14.24it/s, now=None]\u001b[A\n",
       "t:  59%|█████▉    | 741/1260 [00:54<00:37, 13.99it/s, now=None]\u001b[A\n",
@@ -1018,13 +847,7 @@
       "t:  96%|█████████▋| 1213/1260 [01:28<00:03, 13.80it/s, now=None]\u001b[A\n",
       "t:  96%|█████████▋| 1215/1260 [01:28<00:03, 13.83it/s, now=None]\u001b[A\n",
       "t:  97%|█████████▋| 1217/1260 [01:28<00:03, 13.58it/s, now=None]\u001b[A\n",
-      "t:  97%|█████████▋| 1219/1260 [01:29<00:03, 13.53it/s, now=None]\u001b[A\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "t:  97%|█████████▋| 1219/1260 [01:29<00:03, 13.53it/s, now=None]\u001b[A\n",
       "t:  97%|█████████▋| 1221/1260 [01:29<00:02, 13.87it/s, now=None]\u001b[A\n",
       "t:  97%|█████████▋| 1223/1260 [01:29<00:02, 13.87it/s, now=None]\u001b[A\n",
       "t:  97%|█████████▋| 1225/1260 [01:29<00:02, 13.66it/s, now=None]\u001b[A\n",
@@ -1069,24 +892,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "\n",
-       "<video width=\"960\" height=\"540\" controls>\n",
-       "  <source src=\"output_video/project_video.mp4\">\n",
-       "</video>\n"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'HTML' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-2-68061e453756>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m HTML(\"\"\"\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;34m<\u001b[0m\u001b[0mvideo\u001b[0m \u001b[0mwidth\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"960\"\u001b[0m \u001b[0mheight\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"540\"\u001b[0m \u001b[0mcontrols\u001b[0m\u001b[0;34m>\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m   \u001b[0;34m<\u001b[0m\u001b[0msource\u001b[0m \u001b[0msrc\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"{0}\"\u001b[0m\u001b[0;34m>\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m<\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0mvideo\u001b[0m\u001b[0;34m>\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \"\"\".format(white_output))\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'HTML' is not defined"
+     ]
     }
    ],
    "source": [
@@ -1247,13 +1065,7 @@
       "t:  50%|█████     | 243/485 [00:16<00:16, 15.08it/s, now=None]\u001b[A\n",
       "t:  51%|█████     | 245/485 [00:16<00:15, 15.13it/s, now=None]\u001b[A\n",
       "t:  51%|█████     | 247/485 [00:16<00:16, 14.78it/s, now=None]\u001b[A\n",
-      "t:  51%|█████▏    | 249/485 [00:17<00:16, 14.43it/s, now=None]\u001b[A\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "t:  51%|█████▏    | 249/485 [00:17<00:16, 14.43it/s, now=None]\u001b[A\n",
       "t:  52%|█████▏    | 251/485 [00:17<00:15, 14.66it/s, now=None]\u001b[A\n",
       "t:  52%|█████▏    | 253/485 [00:17<00:16, 14.45it/s, now=None]\u001b[A\n",
       "t:  53%|█████▎    | 255/485 [00:17<00:15, 14.74it/s, now=None]\u001b[A\n",
