improve threshold in lighter areas

--- a/writeup.ipynb
+++ b/writeup.ipynb
@@ -205,26 +205,9 @@
     "\n",
     "Above images shows the result of creating a threshold image. \n",
     "\n",
-    "### region of interest \n",
-    "\n",
-    "Before I processed the image to obtain color transformation and gradients, I applied an `region of interest` on the lower half part of the image to remove unnecessary noise.\n",
-    "\n",
-    "```python\n",
-    "    # region masking bottom half +offset of the image  \n",
-    "    region = np.array([[ (0,h), (w,h), (w,h//2+offset), (0,h//2+offset) ]], dtype=np.int32)\n",
-    "        \n",
-    "    #filling pixels inside the polygon defined by \"vertices\" with the fill color    \n",
-    "    cv2.fillPoly(mask, region, ignore_mask_color)\n",
-    "    \n",
-    "    #returning the image only where mask pixels are nonzero\n",
-    "    masked_image = cv2.bitwise_and(image, mask)\n",
-    "```\n",
-    "\n",
-    "The `region` is a rectangle which maps the pixels in the image we like to keep, and the `ignore_mask_color` is the masking color (255,255,255). The `mask` which is initialized as a matrix of same size of the image, with all elements in the matrix set to 0. The `fillPoly` fills the mask with the masking color in the areas specified by the `region`. Then to remove the part we are not interessted in, we take a bitwise and between the `image` and the `mask`.\n",
-    "\n",
     "### applying color transform and gradients\n",
     "\n",
-    "I choose to use the L and S channel from the HLS color space, where the sobel magnitude were performed on the L channel with the threshold values 50-150 (blue color) and absolute gradient in x direction where performed on S channel with threshold values 30-150 (green color) and color transform of the S channel with threshold values 90-255 (red color).\n",
+    "I choose the L from LUV color space with color threshold 200-255 (green color), R channel from RGB with color threshold 225-255 (blue color) and apply a sobel magnitude on B channel from LAB color space with threshold 145-200 (red color). The L in LUV were often issue of overfitting, due to noise furhter away from the car, which can be seen for the `test1` image file (see warped image below).\n",
     "\n",
     "The bellow code shows howto apply absolute gradient $|\\partial x|$ in $x$ direction:\n",
     "```python\n",
@@ -312,7 +295,9 @@
     "</table>\n",
     "\n",
     "\n",
-    "What can be observed from these images is that the blue component, sobel magnitude of L channel, is more present than we like it to be. The left image is the same image is shown in the distorion correction example,above subsection section marked with 2. So, this is a image with light road pavement, which I have not been able to find sutable adjustment for with help  of gradients and threshold values. "
+    "What can be observed from these images is that the blue component, sobel magnitude of L channel, is more present than we like it to be. The left image is the same image is shown in the distorion correction example,above subsection section marked with 2. So, this is a image with light road pavement, which I have not been able to find sutable adjustment for with help  of gradients and threshold values. \n",
+    "\n",
+    "The left image `test1` have alot of noise which is due to the L channel in LUV color space, see the green color in `test1` image. Need an adaptive way to change the threshold value of L channel, based brightnes of the color relative to distance."
    ]
   },
   {
